Complete vector search and E4T3

--- a/docs/04_implement_audio_transcription/0402.md
+++ b/docs/04_implement_audio_transcription/0402.md
@@ -85,8 +85,8 @@ The key tasks are as follows:
     Continue in this vein with mined opinions, tracking those per sentence and mined opinion target text, target sentiment, and sentiment-scores (positive and negative).
 
     For each mined opinion, collect a set of assessments, tracking the text, sentiment, and sentiment-scores (positive and negative). Collect all of this in the `sentiment` dictionary and return it as the output of the function.
-5. After filling in these code segments, re-run the application and ensure that you can generate a transcript of the sample call audio. Then, run the extractive, abstractive, and Azure OpenAI summaries. After that, run the sentiment and opinions check. For each operation, you should get back valid results relating to the call transcript.
-6. Deploy the application and ensure that your it still behaves correctly as an App Service.
+5. After filling in these code segments, re-run the application and navigate to the **Call Center** page. Ensure that you can generate a transcript of the sample call audio. Then, run the extractive, abstractive, and Azure OpenAI summaries. After that, run the sentiment and opinions check. For each operation, you should get back valid results relating to the call transcript.
+6. Deploy the application and ensure that the functionality behaves as expected as an App Service.
 
 ## Success Criteria
 
