--- a/docs/04_implement_audio_transcription/0403.md
+++ b/docs/04_implement_audio_transcription/0403.md
@@ -7,97 +7,162 @@ parent: 'Exercise 04: Implement audio transcription'
 
 # Task 03 - Implement vector search of audio transcriptions and summaries (30 minutes)
 
-TODO
-(include saving to Cosmos DB and then using the search page)
-
 ## Introduction
 
-Azure OpenAI has the capacity to parse natural language in textual format. We can also incorporate Azure AI Services and its Speech service to perform speech-to-text transcription, enabling us to use the output of the Speech service as an input for OpenAI prompts. Throughout the course of this exercise, you will create an Azure AI Services Speech service and test it out in the OpenAI Studio Chat playground. Then, you will incorporate the service in your existing Streamlit dashboard.
+After seeing you generate a call transcript and summary in the prior tasks of this exercise, the Contoso Suites development team is excited at the prospect of saving these transcripts and then searching through them. They would like to use Cosmos DB to store the transcript and then perform semantic search--that is, searching by concepts or meanings rather than specific words.
 
 ## Description
 
-In this task, you will use the Azure AI Services Speech service that you created in the prior task in the Streamlit app's Chat with Data page. With it, you will be able to capture an utterance from a microphone and, if the Speech service was able to recognize the input audio as speech, submit the text to the Azure OpenAI service as a prompt.
+In this task, you will implement functionality to save the text of a call transcription, as well as its embedding (via Azure OpenAI), in a Cosmos DB container. You will then make use of Cosmos DB's vector similarity capability to perform semantic search in the existing Streamlit application.
 
 The key tasks are as follows:
 
-1. Open the `config.json` file. Fill in the properties for `SpeechKey` and `SpeechRegion` with the appropriate details from your Azure AI Services Speech service.
-2. Open the `1_Chat_with_data.py` Streamlit page. Fill in the function call for `recognize_from_microphone()` based on the prompts in the function's comments.
-
-    {: .note }
-    > Because of the way Streamlit displays chat text, we cannot easily display diagnostic text messages on the screen. For this reason, the `recognize_from_microphone()` function prints out messages. You can see these messages in the console you used to run Streamlit and can use that for troubleshooting.
-
-3. Add a button for speech to text. Give the button a label like `Speech to text`. On button click, call `recognize_from_microphone()`. If you receive text back, submit it as a prompt.
-
-    {: .note }
-    > Because of the way Streamlit displays chat text, using the speech to text button will actually cause its location to move further down the page below the chat history. This is a known oddity in the way Streamlit handles display and [might be fixed in a future version of the product](https://github.com/streamlit/streamlit/issues/7296) but it will not interfere with your ability to complete this task.
-
-4. Ensure you have selected "Chat with Data" as the radio button option. Then, using your microphone, speak the following request: "I've visited Aruba and Bonaire before and would like to visit somewhere else. What other resort locations would be good options if I want to scuba dive?" Ensure that the speech service correctly interprets your utterance and the button's action calls the Azure OpenAI service.
-5. Select the "Function Calls" chat option. Then, using your microphone, speak the following request: "Show me a list of all users in the Silver loyalty tier."
+1. Create a new Cosmos DB container in the `ContosoSuites` database. Name this container `CallTranscripts`. It should have a partition key of `/call_id` and the same vector embedding policy that you used in Exercise 03: a container vector policy using the `cosine` distance function, based on a `float32` data type, and `1536` dimensions, using an index type of `quantizedFlat`. Designate the field for storing vector data as `request_vector`.
+2. Open the `4_Call_Center.py` file in the `ContosoSuitesDashboard` folder. Complete the function `make_azure_openai_embedding_request()`, accepting a string of text and creating an embedding based on it. Be sure to use the `embedding_deployment_name` secret, as the GPT-4o model deployment will not be appropriate for generating embeddings.
+3. Complete the function `generate_embeddings_for_call_contents()`. This function should normalize the incoming text before calling `make_azure_openai_embedding_request()`. Then, you should return the actual embeddings--not just the entire response object!.
+4. Complete the function `save_transcript_to_cosmos_db()`. This function should create a new record in the `CallTranscripts` container.
+5. Open the `5_Call_Center_search.py` file. Replace the `make_azure_openai_embedding_request()` stub function with the function you created in `4_Call_Center.py`. The function call will be exactly the same between these two files.
+6. Complete the `make_cosmos_db_vector_search_request()` function. It should perform a `VectorDistance()` query and return up to `max_results` results with a minimum similarity score of `minimum_similarity_score`. The columns it should return include `id`, `call_id`, `call_transcript`, `abstractive_summary`, and the results of `VectorDistance()` as `SimilarityScore`.
+7. After filling in these code segments, re-run the application and navigate to the **Call Center** page. Ensure that you can still generate a transcript of the sample call audio. Then, run the function to save your transcript into Cosmos DB. After that, switch to the **Call Center Search** page and use the term "Airport Gateway hotel" for your search. Ensure that you get one result back. Then, increase the **Minimum Similarity Score** slider to a point higher than your similarity score and ensure you get zero records back.
+8. Deploy the application and ensure that the functionality behaves as expected as an App Service.
 
 ## Success Criteria
 
-- You have created a speech to text button on the Streamlit dashboard
-- You are able to translate microphone inputs to text utterances and send them to the Azure OpenAI service
+- You are saving transcripts and abstractive summaries in Cosmos DB, as well as an embedding of the abstractive summary.
+- You are able to perform a search on the **Call Center Search** page, returning call transcripts based on a text query.
 
 ## Learning Resources
 
-- [What is the Speech service?](https://learn.microsoft.com/azure/ai-services/speech-service/overview)
-- [Quickstart: Recognize and convert speech to text](https://learn.microsoft.com/azure/ai-services/speech-service/get-started-speech-to-text?tabs=windows%2Cterminal&pivots=programming-language-python)
-- [Azure OpenAI speech to speech chat](https://learn.microsoft.com/azure/ai-services/speech-service/openai-speech)
-- [st.button](https://docs.streamlit.io/library/api-reference/widgets/st.button)
-- [Chat messages on top, forms at bottom (alternative solution )](https://discuss.streamlit.io/t/chat-messages-on-top-forms-at-bottom/48474)
-
-## Tips
-
-- The speech to text function looks for the default microphone on your machine. If you are connecting through a virtual machine or do not have a microphone installed, you may get back `speechsdk.ResultReason.NoMatch` when you are speaking.
-- Azure speech recognition has a fairly short default timeout, so if you do not speak for a few seconds, it may time out before you have a chance to speak.
+- [Index and query vectors in Azure Cosmos DB for NoSQL in Python](https://learn.microsoft.com/azure/cosmos-db/nosql/how-to-python-vector-index-query)
+- [Tutorial: Explore Azure OpenAI Service embeddings and document search](https://learn.microsoft.com/azure/ai-services/openai/tutorials/embeddings?tabs=python-new%2Ccommand-line&pivots=programming-language-python)
+- [cosmos-vector-aoai](https://github.com/madebygps/cosmos-vector-aoai/tree/main)
+- [azure-cosmos-db-vector-search-openai-python](https://github.com/cjoakim/azure-cosmos-db-vector-search-openai-python/tree/main)
 
 ## Solution
 
 <details markdown="block">
 <summary>Expand this section to view the solution</summary>
 
-- Modify the `config.json` file to fill in values for the `SpeechKey` and `SpeechRegion` configuration settings. You can find these in the **Keys and Endpoint** option of the **Resource Management** menu. Be sure to use the region name as it appears on that page, so for example, East US 2 should show up as "eastus2" in your JSON file.
-- The `recognize_from_microphone()` function uses the Azure AI Services Speech service to accept microphone input and then attempts to convert the audio input into an utterance. If this succeeds, the function returns the translated text. If this function fails, it returns None.
-  - The code for the completed `recognize_from_microphone()` function is as follows:
+- Container vector policies and vector indexing policies must be defined at the time of container creation.
+  - In the [Azure portal](https://portal.azure.com), navigate to your Cosmos DB resource.
+  - Select **Data Explorer** in the left-hand menu.
+  - On the **Data Explorer** page, select **New Container**
+  - In the **New Container** dialog:
+    - Select **Use existing** under **Database id** and select the **ContosoSuites** database from the dropdown list.
+    - Enter `CallTranscripts` into the **Container id** box.
+    - Enter `/call_id` into the **Partition key** box.
+    - Expand the **Container Vectory Policy** section of the dialog, select **Add vector embedding**, and then enter the following values into the specified fields:
+      - Path: Enter **"/request_vector"**.
+      - Data type: Select **float32**.
+      - Distance function: Select **cosine**.
+      - Dimensions: Enter **1536**. This is based on the number of dimensions generated by the `ada-text-embedding-002` model in Azure OpenAI.
+      - Index type: Select **quantizedFlat**. Given the number of dimensions being specified, 1536, the `flat` index type will not work, as it only supports a maximum of 505 dimensions for vectors. The `diskANN` index could also be used here.
+    - Select **OK** to create the container.
+- The completed version of the `make_azure_openai_embedding_request()` function is as follows:
 
     ```python
-    # Create an instance of a speech config with specified subscription key and service region.
-    speech_config = speechsdk.SpeechConfig(subscription=speech_key, region=speech_region)
-    speech_config.speech_recognition_language=speech_recognition_language
-
-    # Create a microphone instance and speech recognizer.
-    audio_config = speechsdk.audio.AudioConfig(use_default_microphone=True)
-    speech_recognizer = speechsdk.SpeechRecognizer(speech_config=speech_config, audio_config=audio_config)
-
-    # Start speech recognition
-    print("Speak into your microphone.")
-    speech_recognition_result = speech_recognizer.recognize_once_async().get()
-
-    # Check the result
-    if speech_recognition_result.reason == speechsdk.ResultReason.RecognizedSpeech:
-        print("Recognized: {}".format(speech_recognition_result.text))
-        return speech_recognition_result.text
-    elif speech_recognition_result.reason == speechsdk.ResultReason.NoMatch:
-        print("No speech could be recognized: {}".format(speech_recognition_result.no_match_details))
-        return None
-    elif speech_recognition_result.reason == speechsdk.ResultReason.Canceled:
-        cancellation_details = speech_recognition_result.cancellation_details
-        print("Speech Recognition canceled: {}".format(cancellation_details.reason))
-        if cancellation_details.reason == speechsdk.CancellationReason.Error:
-            print("Error details: {}".format(cancellation_details.error_details))
-            print("Did you set the speech resource key and region values?")
-        return None
+    def make_azure_openai_embedding_request(text):
+        """Create and return a new embedding request. Key assumptions:
+        - Azure OpenAI endpoint, key, and deployment name stored in Streamlit secrets."""
+    
+        aoai_endpoint = st.secrets["aoai"]["endpoint"]
+        aoai_key = st.secrets["aoai"]["key"]
+        aoai_embedding_deployment_name = st.secrets["aoai"]["embedding_deployment_name"]
+    
+        client = openai.AzureOpenAI(
+            api_key=aoai_key,
+            api_version="2024-06-01",
+            azure_endpoint = aoai_endpoint
+        )
+        # Create and return a new embedding request
+        return client.embeddings.create(
+            model=aoai_embedding_deployment_name,
+            input=text
+        )
     ```
 
-- The `main()` function has a commented out section covering the addition of a new button for speech to text.
-  - The code for the completed button operation is as follows:
+- The completed version of the `generate_embeddings_for_call_contents()` function is as follows:
 
     ```python
-    if st.button("Speech to text"):
-        speech_contents = recognize_from_microphone(speech_key, speech_region)
-        if speech_contents:
-            handle_prompt(chat_option, speech_contents)
+    def generate_embeddings_for_call_contents(call_contents):
+        """Generate embeddings for call contents. Key assumptions:
+        - Call contents is a single string.
+        - Azure OpenAI endpoint, key, and deployment name stored in Streamlit secrets."""
+    
+        # Normalize the text for tokenization
+        normalized_content = normalize_text(call_contents)
+    
+        # Call make_azure_openai_embedding_request() with the normalized content
+        response = make_azure_openai_embedding_request(normalized_content)
+    
+        return response.data[0].embedding
+    ```
+
+- The completed version of the `save_transcript_to_cosmos_db()` function is as follows:
+
+    ```python
+    def save_transcript_to_cosmos_db(transcript_item):
+        """Save embeddings to Cosmos DB vector store. Key assumptions:
+        - transcript_item is a JSON object containing call_id (int), 
+            call_transcript (string), and request_vector (list).
+        - Cosmos DB endpoint, key, and database name stored in Streamlit secrets."""
+    
+        cosmos_endpoint = st.secrets["cosmos"]["endpoint"]
+        cosmos_key = st.secrets["cosmos"]["key"]
+        cosmos_database_name = st.secrets["cosmos"]["database_name"]
+        cosmos_container_name = "CallTranscripts"
+    
+        # Create a CosmosClient
+        client = CosmosClient(url=cosmos_endpoint, credential=cosmos_key)
+        # Load the Cosmos database and container
+        database = client.get_database_client(cosmos_database_name)
+        container = database.get_container_client(cosmos_container_name)
+    
+        # Insert the call transcript
+        container.create_item(body=transcript_item)
+    ```
+
+- The completed version of the `make_cosmos_db_vector_search_request()` function is as follows:
+
+    ```python
+    def make_cosmos_db_vector_search_request(query_embedding, max_results=5, minimum_similarity_score=0.5):
+        """Create and return a new vector search request. Key assumptions:
+        - Query embedding is a list of floats based on a search string.
+        - Cosmos DB endpoint, key, and database name stored in Streamlit secrets."""
+    
+        cosmos_endpoint = st.secrets["cosmos"]["endpoint"]
+        cosmos_key = st.secrets["cosmos"]["key"]
+        cosmos_database_name = st.secrets["cosmos"]["database_name"]
+        cosmos_container_name = "CallTranscripts"
+    
+        # Create a CosmosClient
+        client = CosmosClient(url=cosmos_endpoint, credential=cosmos_key)
+        # Load the Cosmos database and container
+        database = client.get_database_client(cosmos_database_name)
+        container = database.get_container_client(cosmos_container_name)
+    
+        results = container.query_items(
+            query=f"""
+                SELECT TOP {max_results}
+                    c.id,
+                    c.call_id,
+                    c.call_transcript,
+                    c.abstractive_summary,
+                    VectorDistance(c.request_vector, @request_vector) AS SimilarityScore
+                FROM c
+                WHERE
+                    VectorDistance(c.request_vector, @request_vector) > {minimum_similarity_score}
+                ORDER BY
+                    VectorDistance(c.request_vector, @request_vector)
+                """,
+            parameters=[
+                {"name": "@request_vector", "value": query_embedding}
+            ],
+            enable_cross_partition_query=True
+        )
+    
+        # Create and return a new vector search request
+        return results
     ```
 
 </details>
