Add more details on secrets handling

--- a/docs/01_deploy_app_resources/0101.md
+++ b/docs/01_deploy_app_resources/0101.md
@@ -45,11 +45,12 @@ The key tasks are as follows:
 
     > **Important**: Abstractive summarization in the Azure AI Services Language service is only supported in a subset of regions. You must create your Azure AI Language service in one of the [supported regions](https://learn.microsoft.com/azure/ai-services/language-service/summarization/region-support) to allow abstractive summarization to be performed in a later exercise.
 
-6. Use the `DeployAzureResources.bicep` script in the `src/InfrastructureAsCode/` folder to deploy resources out.
+6. Open the `DeployAzureResources.bicep` script in the `src/InfrastructureAsCode/` folder and change the value of **sqlAdminPassword** if you desire to have a password other than the default in the deployment script.
+7. Use the `DeployAzureResources.bicep` script in the `src/InfrastructureAsCode/` folder to deploy resources out.
 
     {: .note }
     > You may receive an error while running this that you must accept the Responsible AI Notice before creating a TextAnalytics (Language) service. To do so, open the [Azure Portal](https://portal.azure.com) and search for "Language" in the menu. Choose the **Language** service and then select Create. On the first page of the form, select the **Continue to create your resource** button at the bottom of the screen. Then, check the box certifying that you have reviewed and acknowledge the terms in the Responsible AI Notice. You can then close the Create Language page and try running the Bicep script again.
-7. Use the `DeployAzureResourcesAPIM.bicep` script int he `src/InfrastructureAsCode/` folder to deploy APIM out. You do **not** need to wait for this to complete, as it can take 30+ minutes to run. Continue to the next exercise while this script deploys.
+8. Use the `DeployAzureResourcesAPIM.bicep` script int he `src/InfrastructureAsCode/` folder to deploy APIM out. You do **not** need to wait for this to complete, as it can take 30+ minutes to run. Continue to the next exercise while this script deploys.
 
 ## Success Criteria
 
