--- a/docs/01_deploy_app_resources/0102.md
+++ b/docs/01_deploy_app_resources/0102.md
@@ -22,7 +22,7 @@ The key tasks are as follows:
 3. Import the data from **FAQ.txt** into a container named `contoso-suites`.
 4. Create a `contoso-suites-faq` index in Azure AI Search, built on the three files in the `contoso-suites` container in your storage account. You should embed with `text-embedding-002-ada` and support Hybrid (Vector + Keyword) search.
 5. Update the front-end code in `src/ContosoSuitesDashboard/` to enable chat operations against the FAQ index.
-   1. Create a file called `secrets.toml` in `src/ContosoSuitesDashboard/.streamlit/`. Pattern it after `secrets.template.toml` but include your Azure OpenAI, Azure AI Search, Azure AI Services Speech service, and Azure AI Services Language service details.
+   1. Create a file called `secrets.toml` in `src/ContosoSuitesDashboard/.streamlit/`. Pattern it after `secrets.template.toml` but include your Azure OpenAI, Azure AI Search, Azure AI Services Speech service, Azure AI Services Language service, Web API endpoint, and Cosmos DB details.
    2. The Contoso Suites team has followed instructions online on how to interact with an Azure OpenAI model deployment. They would like you to extend the code in `src/ContosoSuitesDashboard/pages/1_Chat_with_Data.py` to ensure any queries make use of the Azure AI Search index you have created rather than relying on the inbuilt knowledge of the default GPT-4 model.
    3. You can test your work by running the following queries. The first two queries should respond with relevant information. The final two queries should not give you a valid response because they ask for information outside the scope of our data.
       1. Which hotels on the island of Curacao have EV stations?
@@ -96,22 +96,31 @@ The key tasks are as follows:
 <details markdown="block">
 <summary>Expand this section to view the solution for updating the front-end code.</summary>
 
-- Create a file called `secrets.toml` in `src/ContosoSuitesDashboard/.streamlit/`. Copy the contents of `secrets.template.toml` as a starting point. Then, fill in the details from your Azure OpenAI and Azure AI Search services.
-  - In the [Azure portal](https://portal.azure.com), find the resource group you created.
-  - Navigate to the Azure OpenAI service in your resource group.
-  - In the **Resource Management** menu, select the **Keys and Endpoint** entry. Copy the value of **KEY 1** and save it as `key` in the `[aoai]` section of your secrets file. Copy the value of **Endpoint** and save it as `endpoint`.
-  - Return to the resource group and then select your Azure AI Search service.
-  - Copy the value of **Url** from the **Essentials** panel and save it as `endpoint` in the `[search]` section of your secrets file.
+- Create a file called `secrets.toml` in `src/ContosoSuitesDashboard/.streamlit/`. Copy the contents of `secrets.template.toml` as a starting point. Then, fill in the details from the Azure services you deployed.
+  - For Azure OpenAI secrets:
+    - In the [Azure portal](https://portal.azure.com), find the resource group you created.
+    - Navigate to the Azure OpenAI service in your resource group.
+    - In the **Resource Management** menu, select the **Keys and Endpoint** entry. Copy the value of **KEY 1** and save it as `key` in the `[aoai]` section of your secrets file. Copy the value of **Endpoint** and save it as `endpoint`.
+  - For Azure AI Search service secrets:
+    - Return to the resource group and then select your Azure AI Search service.
+    - Copy the value of **Url** from the **Essentials** panel and save it as `endpoint` in the `[search]` section of your secrets file.
 
-    ![Select the Azure AI Search service URL and save it to the Secrets file.](../../media/Solution/0102_SearchEndpoint.png)
+      ![Select the Azure AI Search service URL and save it to the Secrets file.](../../media/Solution/0102_SearchEndpoint.png)
 
-  - In the **Settings** menu, select the **Keys** entry. Copy the value of **Primary admin key** and save it as `key` in the `[search]` section of your secrets file.
-  - Return to the resource group and then select your Azure AI Search service.
-  - Copy the value of **Url** from the **Essentials** panel and save it as `endpoint` in the `[search]` section of your secrets file.
-  - Return to the resource group and select your Speech service.
-  - In the **Resource Management** menu, select the **Keys and Endpoint** entry. Copy the value of **KEY 1** and save it as `key` in the `[speech]` section of your secrets file. Copy the value of **Location/Region** and save it as `region`.
-  - Return to the resource group and select your Language service.
-  - In the **Resource Management** menu, select the **Keys and Endpoint** entry. Copy the value of **KEY 1** and save it as `key` in the `[language]` section of your secrets file. Copy the value of **Endpoint** and save it as `endpoint`.
+    - In the **Settings** menu, select the **Keys** entry. Copy the value of **Primary admin key** and save it as `key` in the `[search]` section of your secrets file.
+  - For Azure AI Speech service secrets:
+    - Return to the resource group and select your Speech service.
+    - In the **Resource Management** menu, select the **Keys and Endpoint** entry. Copy the value of **KEY 1** and save it as `key` in the `[speech]` section of your secrets file. Copy the value of **Location/Region** and save it as `region`.
+  - For Azure AI Language service secrets:
+    - Return to the resource group and select your Language service.
+    - In the **Resource Management** menu, select the **Keys and Endpoint** entry. Copy the value of **KEY 1** and save it as `key` in the `[language]` section of your secrets file. Copy the value of **Endpoint** and save it as `endpoint`.
+  - For API secrets:
+    - For now, set the value of **endpoint** to `http://localhost:5292`. In Exercise 2, when you run the Web API code locally, you will see the URL it uses for hosting. If the hosting port differs from 5292, change your secret to match that hosting port.
+    - Return to the resource group and select the App Service named `{your_unique_id}-api`.
+    - Copy the value of **Default domain** and save it for later. You will need to change the value of `[api][endpoint]` to this URL when you deploy the Streamlit application to Azure App Services, so you will need this URL in the next task.
+  - For Cosmos DB secrets:
+    - Return to the resource group and select the Azure Cosmos DB account.
+    - In the **Settings** menu, navigate to the **Keys** option. Copy the value of **URI** and save it as `endpoint` in the `[cosmos]` section of your secrets file. Copy the value of **PRIMARY KEY** and save it as the `key` secret.
   
 - Open the file `src/ContosoSuitesDashboard/pages/1_Chat_with_Data.py`. The code will run as-is, but will not have knowledge of your search index. To support chat with data, make the following changes to the Python script.
   - Add the search secrets to the `create_chat_completion()` function, below the Azure OpenAI secrets and above the call to create a client.
