--- a/docs/01_deploy_app_resources/0103.md
+++ b/docs/01_deploy_app_resources/0103.md
@@ -27,7 +27,7 @@ The key tasks are as follows:
 
     Retain the JSON output to use in a GitHub Actions secret.
 4. Create the following GitHub Actions secrets:
-   1. `STREAMLIT_SECRETS` -- Paste in the entirety of your `secrets.toml` file.
+   1. `STREAMLIT_SECRETS` -- Paste in the entirety of your `secrets.toml` file. Be sure to change the value of `[api][endpoint]` from localhost to the URL of your API's App Service.
    2. `ACR_LOGIN_SERVER` -- Retrieve from your container registry's **Access keys** menu.
    3. `ACR_USERNAME` -- Retrieve from your container registry's **Access keys** menu.
    4. `ACR_PASSWORD` -- Retrieve from your container registry's **Access keys** menu.
