Updating description to mention hotel name and details will be vectorized by the function app.

--- a/docs/03_implement_vector_search_in_cosmos_db_nosql/0302.md
+++ b/docs/03_implement_vector_search_in_cosmos_db_nosql/0302.md
@@ -23,7 +23,7 @@ The key tasks are as follows:
 
 1. Review the Azure Function code in the `CosmosChangeFeedVectorization.cs` file in the `src\ContosoSuitesVectorizationFunction` folder. The function:
    1. Is triggered whenever a document is inserted or updated in the `MaintenanceRequests` container using the Azure Cosmos DB change feed.
-   2. Vectorizes text in the `details` field of a maintenance request using a `text-embedding-ada-002` model in Azure OpenAI.
+   2. Combines the content in the `hotel` and `details` fields of a maintenance request dnd vectorizes it using a `text-embedding-ada-002` model in Azure OpenAI.
    3. Writes generated vectors into the `request_embeddings` fields of the document and updates it in the `MaintenanceRequests` container.
    4. Marks the document as "Vectorized."
 2. Create a `local.settings.json` file in the `src\ContosoSuitesVectorizationFunction` folder and populate it with the settings needed by the function to run the function locally. Hint, the required values can be identified using the calls to `Environment.GetEnvironmentVariable` in the `CosmosChangeFeedVectorization.cs` file, as well as providing the Cosmos DB connection string required by the input and output bindings of the function.
@@ -63,8 +63,9 @@ The key tasks are as follows:
 
 ## Success Criteria
 
-- You have tested the function locally and deployed it to Azure.
-- You have successfully created vector embeddings for each document in the `PropertyMaintenance.json` file using the deployed Function App.
+- You have tested the function locally.
+- You have deployed the function to your Azure Function app.
+- You have successfully created vector embeddings for each document in the `PropertyMaintenance.json` file using the deployed Function App and written them into Azure Cosmos DB.
 - You have executed a `VectorDistance()` function via the Cosmos DB Data Explorer.
 
 ## Learning Resources
@@ -91,9 +92,9 @@ The key tasks are as follows:
   - Locate the `Run` function starting on line 42 and examine the code contained within it.
     - The code on line 49 reduces the list of documents sent to the function to only those that do not have a `Type` of "Vectorized". This prevents the updates pushed by the function back to the `MaintenanceRequests` container from being revectorized by the function.
     - If there are no documents that require vectorization, the function will exit without making any changes to the input documents.
-    - The `foreach` loop starting on line 52 iterates through each document in the change feed that requires the text in its `details` field to be vectorized. The `details` text is sent to Azure OpenAI to create vector embeddings using the deployment for the `text-embedding-ada-002` model. The returned vector embeddings are saved into the `RequestVector` field of the document.
+    - The `foreach` loop starting on line 52 iterates through each document in the change feed that requires vectorization. The `hotel` and `details` fields are combined and the text is sent to Azure OpenAI to create vector embeddings using the deployment for the `text-embedding-ada-002` model. The returned vector embeddings are saved into the `RequestVector` field of the document.
     - The document's `Type` field is set to "Vectorized".
-    - On line 72, the list of input documents is returned, which uses the Cosmos DB output binding to write the documents updated with vector embeddings back into the `MaintenanceRequests` container in Cosmos DB.
+    - On line 74, the list of input documents is returned, which uses the Cosmos DB output binding to write the documents updated with vector embeddings back into the `MaintenanceRequests` container in Cosmos DB.
 
 - To create a `local.settings.json` file, navigate to the `src\ContosoSuitesVectorizationFunction` directory, create a new file named `local.settings.json`, and add the following content, replacing the bracketed tokens with values from your Azure OpenAI and Azure Cosmos DB services.
 
@@ -205,6 +206,8 @@ The key tasks are as follows:
 
     ![The Upload Items dialog is displayed with the browse and Upload buttons highlighted. UserReviews.json appears in the Select JSON files box.](../../media/Solution/0302-upload-items-property-maintenance.png)
 
+    The upload status should indicate 48 documents created.
+
   - Return to the Function Apps **Log Stream** browser window you opened in the previous step and observe the logs as the maintenance request are bulk uploaded and processed.
   - Return to the Cosmos DB `MaintenanceRequests` browser window, close the upload dialog, and select the refresh icon on the MaintenanceRequests>Items tab in the Data Explorer.
 
@@ -227,20 +230,20 @@ The key tasks are as follows:
     ```
 
   - Replace the `<QUERY_VECTOR>` token in the query with the vectorized representation of "air conditioning malfunction," which you can find in the `Query_Vector.txt` file in the [src\data folder](https://github.com/microsoft/TechExcel-Integrating-Azure-PaaS-and-AI-Services-for-AI-Design-Wins/tree/main/src/data). Copy the entire contents of the file, and paste it into the query in place of `<QUERY_VECTOR>`.
-  - Select **Execute Query** on the toolbar and observe the output in the **Results** panel. You should see results similar to the following:
+  - Select **Execute Query** on the toolbar and observe the output in the **Results** panel. You should see list of results similar to the following (abbreviated for brevity):
 
     ```json
+    {
+        "hotel_id": 1,
+        "hotel": "Oceanview Inn",
+        "details": "The air conditioning (A/C) unit in room 227 is malfunctioning and making a loud noise. Customer will be out of the room between 5:00 and 8:30 PM this evening. This needs immediate maintenance attention. If the issue cannot be resolved, we will need to move the customer to a new room.",
+        "SimilarityScore": 0.847799148429741
+    },
     {
         "hotel_id": 12,
         "hotel": "The Downtown Plaza Hotel",
         "details": "The thermostat does not appear to be working in room 328, and the air conditioning (A/C) unit will not turn on to cool down the room.",
-        "SimilarityScore": 0.8774162384443005
-    },
-    {
-        "hotel_id": 1,
-        "hotel": "Oceanview Inn",
-        "details": "The air conditioning (A/C) unit in room 105 is malfunctioning and making a loud noise. This needs maintenance attention.",
-        "SimilarityScore": 0.895450004671674
+        "SimilarityScore": 0.838297398035295
     }
     ```
 
