--- a/docs/01_deploy_app_resources/0102.md
+++ b/docs/01_deploy_app_resources/0102.md
@@ -117,7 +117,7 @@ The key tasks are as follows:
   - For API secrets:
     - For now, set the value of **endpoint** to `http://localhost:5292`. In Exercise 2, when you run the Web API code locally, you will see the URL it uses for hosting. If the hosting port differs from 5292, change your secret to match that hosting port.
     - Return to the resource group and select the App Service named `{your_unique_id}-api`.
-    - Copy the value of **Default domain** and save it for later. You will need to change the value of `[api][endpoint]` to this URL when you deploy the Streamlit application to Azure App Services, so you will need this URL in the next task.
+    - Copy the value of **Default domain** and save it for later (and include `https://` if it is not there when you copy the value). You will need to change the value of `[api][endpoint]` to this URL when you deploy the Streamlit application to Azure App Services, so you will need this URL in the next task.
   - For Cosmos DB secrets:
     - Return to the resource group and select the Azure Cosmos DB account.
     - In the **Settings** menu, navigate to the **Keys** option. Copy the value of **URI** and save it as `endpoint` in the `[cosmos]` section of your secrets file. Copy the value of **PRIMARY KEY** and save it as the `key` secret.
