Update versions of Actions

--- a/docs/01_deploy_app_resources/0102.md
+++ b/docs/01_deploy_app_resources/0102.md
@@ -131,7 +131,10 @@ The key tasks are as follows:
     search_index_name = st.secrets["search"]["index_name"]
     ```
 
-  - You may also wish to add a note to the `create_chat_completion()` docstrings to note this new assumption.
+    {: .important }
+    > Python is a whitespace-significant language, so you will need to ensure that any code you add is appropriately indented. If you are not familiar with whitespace rules in Python, the **Python** extension for Visual Studio Code will help track whitespace-related errors.
+
+  - You may also wish to update the docstring for `create_chat_completion()` to reference this new assumption.
   - Change the `create_chat_completion()` function's `return` statement's chat completion request to one that includes an Azure AI Search data source.
 
     ```python
