Add note on delay

--- a/docs/01_deploy_app_resources/0103.md
+++ b/docs/01_deploy_app_resources/0103.md
@@ -36,6 +36,9 @@ The key tasks are as follows:
 6. Manually execute the GitHub Actions workflows named **API Deployment** and **Dashboard Deployment**.
 7. Connect to your dashboard website and ensure that you can still perform chat with data operations. To test, you can use a question like, "Do I need to pay extra money to use an EV station when I am a guest of the hotel?"
 
+    {: .note }
+    > It may take several minutes for Azure Application Services to be ready to serve your dashboard website. If it does not come up within 5 minutes or so, you could choose to **Stop** and then **Start** the App Service.
+
 ## Success Criteria
 
 - You have deployed your API and dashboard as Azure Application Services and are able to access the dashboard remotely.
