--- a/docs/02_implement_function_calls/0201.md
+++ b/docs/02_implement_function_calls/0201.md
@@ -21,7 +21,7 @@ The key tasks are as follows:
 
 1. Add your IP address to your Azure SQL Server's firewall allow list and also enable the **Allow Azure services and resources to access this server** setting.
 2. Connect to your remote Azure SQL Database and run the script in `src/data/BookingsHistory.sql` against that database, creating several tables and populating them with sample data.
-3. Create an environment variable locally called `AZURE_SQL_DB_CONNECTION_STRING`, containing the connection string for your Azure SQL DB. Use SQL authentication. By default, the user ID is `contosoadmin` and the database name is `ContosoSuitesBookings`. The password is whatever you set it to be in Exercise 1. Be sure to set the `Encrypt` and `TrustServerCertificate` settings to **True**.
+3. Create an environment variable locally called `SQLCONNSTR_ContosoSuites`, containing the connection string for your Azure SQL DB. Use SQL authentication. By default, the user ID is `contosoadmin` and the database name is `ContosoSuitesBookings`. The password is whatever you set it to be in Exercise 1. Be sure to set the `Encrypt` and `TrustServerCertificate` settings to **True**.
 
     {: .note }
     > After creating an environment variable, you will need to close and re-open your terminal to refresh the list of environment variables. If you are using Visual Studio Code to run this code base, you may need to close and re-open all open instances of VS Code, as instantiating a new terminal might not refresh the list of environment variables.
@@ -33,7 +33,7 @@ The key tasks are as follows:
     {: .note }
     > You may need to change the `[api].[endpoint]` key in your `secrets.toml` file to point to your local Web API service, rather than the App Service deployment.
 
-7. Deploy your App Service code changes and ensure they propagate to Azure App Services. Then, add a new connection string to the App Service's environment variables called `AZURE_SQL_DB_CONNECTION_STRING`. The Value should be the value of your connection string and the Type should be **SQLServer**.
+7. Deploy your App Service code changes and ensure they propagate to Azure App Services. Then, add a new connection string to the App Service's environment variables called `ContosoSuites`. The Value should be the value of your connection string and the Type should be **SQLServer**. Azure App Services will automatically add the `SQLCONNSTR_` so you should not add it yourself when creating this variable.
 8. Test your deployed Streamlit application and ensure that it is able to load the hotels drop-down list and bookings table as expected.
 
 ## Success Criteria
@@ -60,12 +60,12 @@ The key tasks are as follows:
     ![Allow your machine and Azure resources to connect to this Azure SQL Server.](../../media/Solution/0201_Networking.png)
 
 - If you have a tool such as SQL Server Management Studio or Azure Data Studio already installed, you can connect to your Azure SQL Database via its endpoint--the server name in your SQL connection string. If you do not have a database tool installed, navigate to the **ContosoSuitesBookings** database in your resource group. Then, on the left-hand menu, select the **Query editor (preview)** menu option. Log in with your SQL user name (`contosoadmin` by default) and password. From there, you can paste the contents of `src/data/BookingsHistory.sql` to create the bookings history tables and load them with sample data.
-- Create an environment variable locally, giving it the name `AZURE_SQL_DB_CONNECTION_STRING`. There are several ways to create an environment variable, including `setx` in the Windows command shell, the `$env` variable in PowerShell, and the **Environment Variables** option in the **Advanced** tab of System Properties.
+- Create an environment variable locally, giving it the name `SQLCONNSTR_ContosoSuites`. There are several ways to create an environment variable, including `setx` in the Windows command shell, the `$env` variable in PowerShell, and the **Environment Variables** option in the **Advanced** tab of System Properties.
 
     To perform this in PowerShell, you can run the following command:
 
     ```powershell
-    $env:AZURE_SQL_DB_CONNECTION_STRING = 'Server=tcp:{your server}.database.windows.net,1433;Initial Catalog=ContosoSuitesBookings;Persist Security Info=False;User ID=contosoadmin;Password={your_password};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;'
+    $env:SQLCONNSTR_ContosoSuites = 'Server=tcp:{your server}.database.windows.net,1433;Initial Catalog=ContosoSuitesBookings;Persist Security Info=False;User ID=contosoadmin;Password={your_password};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;'
     ```
 
     Should you wish to create an environment variable using the System Properties user interface, it is possible to do this as well.
@@ -107,7 +107,7 @@ The key tasks are as follows:
 
      ![Creating a new environment variable for an Azure App Service](../../media/Solution/0201_AddEnvironmentVariable1.png)
 
-  - Enter `AZURE_SQL_DB_CONNECTION_STRING` as the Name and then fill in your connection string for Value. For Type, select **SQLServer** from the drop-down. Then, select the **Save** button to save this environment variable.
+  - Enter `ContosoSuites` as the Name and then fill in your connection string for Value. For Type, select **SQLServer** from the drop-down. Then, select the **Save** button to save this environment variable.
 
      ![Filling in details for the new environment variable for an Azure App Service](../../media/Solution/0201_AddEnvironmentVariable2.png)
 
